@@ -1,3 +1,8 @@
+2002-06-19  Seth Robertson  <seth@yeah.baka.org>
+
+	* lib/b_general.c (bk_general_destroy_insert): Copy-paste
+	error--destroy functions were never called before.
+
 2002-06-19  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* include/libbk.h (bk_alloca_free): just a no-op
